--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ html {
 }
 body{
 	font-family: 'Jost', Arial, Helvetica, sans-serif;
-	font-size: 22px;
+	font-size: 20px;
 	line-height: 1.37;
 	letter-spacing: 0;
 	font-weight: 400;
@@ -657,6 +657,7 @@ section{
 	margin: 0;
 	padding: 0;
 	margin-bottom: 43px;
+	text-align: justify;
 }
 .main_title p a{
 	color: #000;
@@ -977,7 +978,7 @@ section{
 	padding: 0;
 	font-size: 18px;
 	line-height: 30px;
-	margin-left: 20px;
+	margin-left: 5px;
 }
 .fn_cs_boxed_list h3{
 	margin: 0;
@@ -1100,7 +1101,7 @@ section{
 
 
 .fn_cs_desc{
-	text-align: center;
+	text-align: justify;
 }
 
 
