--- a/css/style.css
+++ b/css/style.css
@@ -2644,6 +2644,8 @@ section {
 		justify-content: center;
 	}
 	.mobile-footer{
+		background-color: #000;
+
 		.copyright {
 			padding-top: 25px;
 			position: relative;
@@ -2683,8 +2685,8 @@ section {
 			display: block;
 			width: 30px;
 			height: 30px;
-			border: 2px solid #000;
-			color: #0e090d;
+			border: 2px solid #fff;
+			color: #fff;
 			text-decoration: none;
 			position: relative;
 		}
@@ -2707,16 +2709,17 @@ section {
 			font-size: 18px;
 			font-weight: 500;
 			padding-bottom: 4px;
+			color: #fff;
 		}
 		
 		.desc a {
-			color: #000;
+			color: #fff;
 			text-decoration: none;
 			border-bottom: 2px solid transparent;
 		}
 		
 		.desc a:hover {
-			border-color: #000;
+			border-color: (var(--main-color));
 		}
 	}
 }
